--- a/app/src/main/res/layout/layout_main_nav.xml
+++ b/app/src/main/res/layout/layout_main_nav.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
-                android:text="六月的雨"
+                android:text="墨尘+lyb"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
